Add menu script and start about us page

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
   <title>
-   ESI Asia Pacific Pty Ltd
+   About Us
   </title>
   <link href="css/bootstrap.css" rel="stylesheet"/>
   <link href="css/main.css" rel="stylesheet"/>
@@ -24,7 +24,7 @@
   <link href="/favicon.png" rel="icon"/>
  </head>
  <body>
-  <header class="banner banner-homepage header">
+  <header class="banner header banner-about">
    <nav class="navbar navbar-expand-lg">
     <ul class="navbar-nav">
      <li class="nav-item">
@@ -116,42 +116,37 @@
      </div>
      <div class="col-md-6">
       <h1>
-       Our renewable
-       <br/>
-       energy future
+       Connect with
       </h1>
       <h1>
-       — today
+       us today!
       </h1>
      </div>
     </div>
    </div>
   </header>
   <main class="content-block">
-   <div class="row">
-    <div class="col-md-6">
-     <p>
-      We provide reliable and environmentally friendly
-      <strong>
-       renewable energy storage solutions
-      </strong>
-      that are essential for
-      <strong>
-       Australia's transition to a renewable energy future.
-      </strong>
-     </p>
-     <p>
-      Energy Storage Industries - Asia Pacific (ESI) is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
-     </p>
-     <p>
-      By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
-     </p>
-    </div>
-    <div class="col-md-6">
-     <img src="images/Home-Article.jpg">
-     </img>
-    </div>
-   </div>
+   <p>
+    At Energy Storage Industries — Asia Pacific (ESI), we provide reliable and environmentally friendly renewable energy storage solutions that are essential for Australia's transition to a renewable energy future.
+   </p>
+   <p>
+    ESI is fully integrated — we manufacture, install, maintain and finance energy storage solutions.
+   </p>
+   <p>
+    We are investing up to $70 million to manufacture and distribute low-cost, long-life iron flow batteries that allow large-scale energy storage [link to the our products and services page] for wholesale electricity generators, energy retailers, and commercial and industrial (C&amp;I) customers.
+   </p>
+   <p>
+    We also investing in the manufacture of small, modular distributed energy storage units that can be installed in low voltage networks and microgrids, and behind the meter installations for C&amp;I customers.
+   </p>
+   <p>
+    By 2026, ESI will deliver 400 megawatts (MW) of energy storage each year for the next 15 years — that is six gigawatts (GW) of energy storage, or 20 per cent of Australia's renewable energy needs.
+   </p>
+   <p>
+    We are a Queensland-based, 100 per cent Australian-owned company. We have a research and development facility at the National Battery Testing Centre [when created, this will link to the NBTC page] in Brisbane.
+   </p>
+   <p>
+    Construction has started on our manufacturing facility at Maryborough, [when created, this will link to the Maryborough page] and we will soon expand our operations with a second facility at Townsville [when created, this will link to Townsville page]. ESI plans to export renewable energy storage solutions to Asia Pacific within the next six years.
+   </p>
   </main>
   <footer>
    <section class="contact">
