--- a/contact.html
+++ b/contact.html
@@ -32,123 +32,202 @@
  </head>
  <body>
   <header class="banner header banner-no-background">
-   <object data="menu.html">
-    Your browser doesn’t support the object tag.
-   </object>
-   <header class="banner-contact header">
-    <div class="banner-text banner-text-contact">
-     <h1>
-      Contact Us
-     </h1>
-    </div>
-   </header>
-  </header>
-  <main class="content-block">
-   <img src="images/contact-line.png" style="text-align: center"/>
-   <div class="text-column" style="padding: 0 0 0 0">
-    <h2 style="text-align: center">
-     OUR CONTACT INFO
-    </h2>
+   <nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+     <li class="nav-item">
+      <a class="nav-link btn" href="/">
+       Home
+      </a>
+     </li>
+     <li class="nav-item dropdown">
+      <a class="nav-link btn" data-toggle="dropdown" href="/about">
+       About Us
+      </a>
+      <div class="dropdown-menu">
+       <a class="dropdown-item btn btn-sub" href="/board">
+        Board
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/senior">
+        Senior Mangement
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/environment">
+        Environment, Social and Governance
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/careers">
+        Careers
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Products &amp; services
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/technology">
+        Technology
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/applications">
+        Applications
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Operations
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/maryborough">
+        Maryborough
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/townsville">
+        Townsville
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/randd">
+        Research and development
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/partners">
+        Partners
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/news">
+       News and media
+      </a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/contact">
+       Contact
+      </a>
+     </li>
+    </ul>
+   </nav>
+   <div class="banner-text banner-text-contact">
+    <h1>
+     Contact Us
+    </h1>
    </div>
-   <div class="contact-page-info">
-    <div class="contact-page-box">
-     <i class="material-icons" style="color: #71b6d5">
+  </header>
+ </body>
+</html>
+<main class="content-block">
+ <img src="images/contact-line.png" style="text-align: center"/>
+ <div class="text-column" style="padding: 0 0 0 0">
+  <h2 style="text-align: center">
+   OUR CONTACT INFO
+  </h2>
+ </div>
+ <div class="contact-page-info">
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    room
+   </i>
+   <h2>
+    Address
+   </h2>
+   <p>
+    2/11 Morrison Close,
+   </p>
+   <p>
+    Mansfield 4122
+   </p>
+   <p>
+    Queensland
+   </p>
+  </div>
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    today
+   </i>
+   <h2>
+    Working Time
+   </h2>
+   <p>
+    Monday - Friday — 08:00 - 16:00
+   </p>
+   <p>
+    Saturday — Closed
+   </p>
+   <p>
+    Sunday — Closed
+   </p>
+  </div>
+  <div class="contact-page-box">
+   <i class="material-icons" style="color: #71b6d5">
+    email
+   </i>
+   <h2>
+    Email
+   </h2>
+   <p>
+    info@esiap.com.au
+   </p>
+  </div>
+ </div>
+ <img src="images/mail-line.png" style="text-align: center"/>
+ <div class="text-column" style="padding: 0 0 0 0">
+  <h2 style="text-align: center">
+   CONTACT FORM
+  </h2>
+ </div>
+ <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
+  <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
+  <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
+  <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
+  <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
+ </form>
+</main>
+<footer>
+ <section class="contact">
+  <div class="footer-information">
+   <a class="footer-logo" href="/">
+    <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+   </a>
+   <div class="footer-contacts">
+    <h4 class="contact-text">
+     CONTACT
+    </h4>
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
       room
      </i>
-     <h2>
-      Address
-     </h2>
-     <p>
-      2/11 Morrison Close,
-     </p>
-     <p>
-      Mansfield 4122
-     </p>
-     <p>
-      Queensland
+     <p class="ml-2">
+      Brisbane, Australia
      </p>
     </div>
-    <div class="contact-page-box">
-     <i class="material-icons" style="color: #71b6d5">
-      today
+    <div class="icon-row">
+     <i class="material-icons footer-contact-icon">
+      mail
      </i>
-     <h2>
-      Working Time
-     </h2>
-     <p>
-      Monday - Friday — 08:00 - 16:00
-     </p>
-     <p>
-      Saturday — Closed
-     </p>
-     <p>
-      Sunday — Closed
-     </p>
-    </div>
-    <div class="contact-page-box">
-     <i class="material-icons" style="color: #71b6d5">
-      email
-     </i>
-     <h2>
-      Email
-     </h2>
-     <p>
+     <p class="ml-2">
       info@esiap.com.au
      </p>
     </div>
    </div>
-   <img src="images/mail-line.png" style="text-align: center"/>
-   <div class="text-column" style="padding: 0 0 0 0">
-    <h2 style="text-align: center">
-     CONTACT FORM
-    </h2>
-   </div>
-   <form action="https://formspree.io/f/mwkwadkq" class="contact-form" id="contact-form" method="POST">
-    <input class="contact-form-sub mr-auto contact-area" name="name" placeholder="Name" required="" type="text"/>
-    <input class="contact-form-sub contact-area" name="_replyto" placeholder="Email" required="" type="email"/>
-    <textarea class="contact-form-main contact-area" id="message" name="message" placeholder="Message" required="" rows="5" type="text"></textarea>
-    <input class="g-recaptcha contact-form-main contact-form-btn" data-callback="onSubmit" data-sitekey="6LdmCEUaAAAAABxRh6R8uhhpzeNz3X9FrY8J3K52" type="submit" value="Send"/>
-   </form>
-  </main>
-  <footer>
-   <section class="contact">
-    <div class="footer-information">
-     <a class="footer-logo" href="/">
-      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
-     </a>
-     <div class="footer-contacts">
-      <h4 class="contact-text">
-       CONTACT
-      </h4>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        room
-       </i>
-       <p class="ml-2">
-        Brisbane, Australia
-       </p>
-      </div>
-      <div class="icon-row">
-       <i class="material-icons footer-contact-icon">
-        mail
-       </i>
-       <p class="ml-2">
-        info@esiap.com.au
-       </p>
-      </div>
-     </div>
-    </div>
-   </section>
-   <section class="footer-background">
-    <div class="footer navbar-expand-lg navbar">
-     <span class="mr-auto">
-      © 2021 All rights reserved.
-     </span>
-     <a class="footer-icon-container" href="https://twitter.com/ess_info">
-      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
-     </a>
-    </div>
-   </section>
-  </footer>
- </body>
-</html>
+  </div>
+ </section>
+ <section class="footer-background">
+  <div class="footer navbar-expand-lg navbar">
+   <span class="mr-auto">
+    © 2021 All rights reserved.
+   </span>
+   <a class="footer-icon-container" href="https://twitter.com/ess_info">
+    <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+   </a>
+  </div>
+ </section>
+</footer>
