--- a/history.html
+++ b/history.html
@@ -1,107 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>History</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js" defer></script>
-    <script>window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')</script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"
-            defer></script>
-    <script src="js/jquery.main.js" defer></script>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="icon" href="/favicon.png">
-</head>
-<body>
-<header class="banner header banner-no-background">
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand mr-auto" href="/"><img class="navbar-logo" src="images/ESIAP-Logo.png" alt="ESI Asia Pacific Pty Ltd"></a>
-        <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link btn" href="/">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/technology">Technology</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/applications">Applications</a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link btn" href="/" data-toggle="dropdown">
-                    About Us
-                </a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item btn btn-sub" href="/history">History</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item btn btn-sub" href="/our-team-aus">Team</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link btn" href="/contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    <header class="banner-history header"></header>
-</header>
-<main class="content-block history">
-    <div class="text-column">
-        <h1>
-            HISTORY
-        </h1>
-        <p>
-            Established in 2020, ESI Asia Pacific Pty Ltd. manufactures low-cost, long-duration iron flow batteries for commercial and
+ <head>
+  <meta charset="utf-8"/>
+  <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport"/>
+  <title>
+   History
+  </title>
+  <link href="css/bootstrap.css" rel="stylesheet"/>
+  <link href="css/main.css" rel="stylesheet"/>
+  <script defer="" src="http://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  </script>
+  <script>
+   window.jQuery || document.write('<script src="js/jquery-3.2.1.min.js" defer><\/script>')
+  </script>
+  <script crossorigin="anonymous" defer="" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js">
+  </script>
+  <script crossorigin="anonymous" defer="" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js">
+  </script>
+  <script defer="" src="js/jquery.main.js">
+  </script>
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
+  <link href="/favicon.png" rel="icon"/>
+ </head>
+ <body>
+  <header class="banner header banner-no-background">
+   <nav class="navbar navbar-expand-lg">
+    <ul class="navbar-nav">
+     <li class="nav-item">
+      <a class="nav-link btn" href="/">
+       Home
+      </a>
+     </li>
+     <li class="nav-item dropdown">
+      <a class="nav-link btn" data-toggle="dropdown" href="/about">
+       About Us
+      </a>
+      <div class="dropdown-menu">
+       <a class="dropdown-item btn btn-sub" href="/board">
+        Board
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/senior">
+        Senior Mangement
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/environment">
+        Environment, Social and Governance
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/careers">
+        Careers
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Products &amp; services
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/technology">
+        Technology
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/applications">
+        Applications
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" data-toggle="dropdown" href="/">
+       Operations
+      </a>
+      <div class="dropdown-menu">
+       <a class="nav-link btn" href="/maryborough">
+        Maryborough
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/townsville">
+        Townsville
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/randd">
+        Research and development
+       </a>
+       <div class="dropdown-divider">
+       </div>
+       <a class="dropdown-item btn btn-sub" href="/partners">
+        Partners
+       </a>
+      </div>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/news">
+       News and media
+      </a>
+     </li>
+     <li class="nav-item">
+      <a class="nav-link btn" href="/contact">
+       Contact
+      </a>
+     </li>
+    </ul>
+   </nav>
+   <header class="banner-history header">
+   </header>
+  </header>
+  <main class="content-block history">
+   <div class="text-column">
+    <h1>
+     HISTORY
+    </h1>
+    <p>
+     Established in 2020, ESI Asia Pacific Pty Ltd. manufactures low-cost, long-duration iron flow batteries for commercial and
             utility-scale energy storage applications requiring 6+ hours of flexible energy capacity. Our long-duration
-            energy storage platforms, the Energy Warehouse&trade; (EW) and Energy Center (EC), use iron, salt, and water
+            energy storage platforms, the Energy Warehouse™ (EW) and Energy Center (EC), use iron, salt, and water
             for
             the electrolyte, and deliver an environmentally safe, long-life energy storage solution for the world's
             renewable energy infrastructure.
-        </p>
-        <p>
-            Based in Queensland, Australia, we have extensive experience in electricity markets, renewable energy, manufacturing, electrical installations and services and trading in energy markets worldwide. .
-        </p>
-        <p>
-            Our technology delivers environmental and cost advantages. Specifically, our non-corrosive, non-toxic
+    </p>
+    <p>
+     Based in Queensland, Australia, we have extensive experience in electricity markets, renewable energy, manufacturing, electrical installations and services and trading in energy markets worldwide. .
+    </p>
+    <p>
+     Our technology delivers environmental and cost advantages. Specifically, our non-corrosive, non-toxic
             chemistry enables use of off-the-shelf materials. Its non-flammable composition eliminates costly fire
             suppression systems. Combined with an innovative cell design, our customers benefit from increased power
-            density and reduced O&M cost over our platform's 20+ year lifespan.
-        </p>
-        <p>
-            With its safe, earth-abundant, proven all-iron flow battery technology, ESS is helping project developers,
+            density and reduced O&amp;M cost over our platform's 20+ year lifespan.
+    </p>
+    <p>
+     With its safe, earth-abundant, proven all-iron flow battery technology, ESS is helping project developers,
             utilities, and EPCs make the transition to more flexible non-lithium-ion storage that is better suited for
             the grid and the environment.
-        </p>
+    </p>
+   </div>
+  </main>
+  <footer>
+   <section class="contact">
+    <div class="footer-information">
+     <a class="footer-logo" href="/">
+      <img alt="ESI Asia Pacific Pty Ltd" class="navbar-logo" src="images/ESIAP-Logo-Reversed.png"/>
+     </a>
+     <div class="footer-contacts">
+      <h4 class="contact-text">
+       CONTACT
+      </h4>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        room
+       </i>
+       <p class="ml-2">
+        Brisbane, Australia
+       </p>
+      </div>
+      <div class="icon-row">
+       <i class="material-icons footer-contact-icon">
+        mail
+       </i>
+       <p class="ml-2">
+        info@esiap.com.au
+       </p>
+      </div>
+     </div>
     </div>
-</main>
-<footer>
-    <section class="contact">
-        <div class="footer-information">
-            <a class="footer-logo" href="/"><img class="navbar-logo" src="images/ESIAP-Logo-Reversed.png" alt="ESI Asia Pacific Pty Ltd"></a>
-            <div class="footer-contacts">
-                <h4 class="contact-text">CONTACT</h4>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">room</i>
-                    <p class="ml-2">Brisbane, Australia</p>
-                </div>
-                <div class="icon-row">
-                    <i class="material-icons footer-contact-icon">mail</i>
-                    <p class="ml-2">info@esiap.com.au</p>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="footer-background">
-        <div class="footer navbar-expand-lg navbar">
-            <span class="mr-auto">&copy; 2021 All rights reserved.</span>
-            <a class="footer-icon-container" href="https://twitter.com/ess_info">
-                <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png">
-            </a>
-        </div>
-    </section>
-</footer>
-</body>
+   </section>
+   <section class="footer-background">
+    <div class="footer navbar-expand-lg navbar">
+     <span class="mr-auto">
+      © 2021 All rights reserved.
+     </span>
+     <a class="footer-icon-container" href="https://twitter.com/ess_info">
+      <img class="footer-icon" src="icons/iconfinder_Circled_Twitter_svg_5279123_blue.png"/>
+     </a>
+    </div>
+   </section>
+  </footer>
+ </body>
 </html>
