--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
      </p>
     </div>
     <div class="col-md-6">
-     <img src="images/Home-Article.jpg">
-     </img>
+     <img src="images/Home-Article.jpg"/>
     </div>
    </div>
   </main>
